--- a/web/themes/custom/module_5_test/scss/partials/_variables.scss
+++ b/web/themes/custom/module_5_test/scss/partials/_variables.scss
@@ -1,11 +1,6 @@
 // defining variables
 
-$Accent_color: #e50913 ;
-$brand-secondary-color: #fff; 
-$bg-accent-color: #141414;
-
-$Small: 576px;
-$Medium: 768px;
-$Large: 992px;
-$Extra-large: 1200px;
-$Extra-extra-large: 1400px;
+$purple: #ff3dec ;
+$white: #fff; 
+$red: #fe0001;
+$blue:#7000ff;
